src/App.css
body {
  background-color: #000;
}

.App {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.App-link {
  color: #61dafb;
}

button {
  font-size: large;
}

.items {
  display: flex;
  width: 100vw;
}

.itemblock {
  width: 100%;
  text-align: left;
}

.header-container {
  width: 100%;
  height: 75px;
  margin-bottom: 1rem;
  z-index: 10000;
}

.header-section {
  padding: 25px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.logo {
  width: 170px;
  height: 30px;
  margin-right: 42px;
}

.logo-title {
  height: 30px;
  margin-bottom: 14px;
  font-weight: 600;
  margin-left: 10px;
  font-size: 30px;
}

.title {
  font-size: 1.5rem;
}

.run-btn {
  margin-left: 1rem;
}

.run-btn-widget {
  background-color: violet;
}

.sider {
  padding-left: 25px;
}

.output {
  display: flex;
  flex-direction: column;
  margin-right: 10px;
  margin-top: 12px;
  margin-right: 24px;
  margin-bottom: 24px;
  flex: 1;
  overflow-x: hidden;
}

.output-box {
  display: flex;
  flex: 1;
  max-height: 82vh;
  background-color: #1E1E1E;
  padding: 10px;
  padding-bottom: 0;
  padding-top: 2px;
  border-radius: 4px;
  overflow-x: auto;
}

.ace_gutter {
  background-color: #1E1E1E !important;
}

.result-title {
  display: 'flex' !important;
  flex-direction: 'row' !important;
  align-items: 'center' !important;
  margin-bottom: 10 !important;
  margin-top: 7 !important;
}

.codepart {
  width: 50%;
}

.menu-btn {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  margin-left: 25px;
  margin-top: 5px;
}

.displayArea {
  flex-direction: column;
  margin: 10px;
  margin-left: 0;
  height: 100%;
  margin-bottom: 24px;
}

.resizer {
  width: 10px;
  display: flex;
  flex: 1;
  justify-content: center;
  align-items: center;
}

.resizer {
  display: flex;
  flex: 1;
  flex-direction: column;
  width: 20px;
}

.codeWindow {
  height: 100%;
  display: inline-flex;
  width: 100%;
}

.codeWindow .displayArea {
  flex-grow: 1;
  flex: 1;
}

.resize-dots {
  width: 0px;
  height: 100%;
  display: flex;
  justify-content: center;
}

.dot {
  height: 4px;
  width: 4px;
  margin: 1px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
}

